FIXED svg position on iOS. iOS do not support padding on SVG. Use margin instead.

--- a/source/customize/_fieldset.scss
+++ b/source/customize/_fieldset.scss
@@ -31,7 +31,7 @@
     svg {
         width: 1em;
         height: 1em;
-        padding-top: 0.1em;
+        margin-top: 0.1em;
         vertical-align: $icon-valign; // middle or text-top
 
         path {
@@ -162,8 +162,8 @@
         @extend .fieldset;
         display: block;
 
-        .fieldset__border {
-            @include fieldset(flex);
+        > * {
+            display: flex;
         }
     }
 }
